# vit-testing

./: .gitignore  404.html  Cargo.toml  Earthfile  README.md  flake.nix  index.html  introduction.html  print.html  searchindex.js  searchindex.json
.circleci/: config.yml
.github/actions/nix-common-setup/: action.yml
.github/workflows/: nix.yml
doc/: SUMMARY.md
doc/iapyx/: iapyx.md
doc/registration-service/: introduction.md
doc/vitup/: configuration.md  mock.md
iapyx/: Cargo.toml  iapyx.html  load.html
iapyx/src/: data.rs  wallet.rs
iapyx/src/cli/args/interactive/: command.rs  mod.rs
iapyx/src/cli/args/qr/: address.rs  mod.rs
iapyx/src/cli/args/stats/: mod.rs
iapyx/src/controller/: builder.rs  mod.rs
iapyx/src/load/: multi_controller.rs
iapyx/src/load/request_generators/jormungandr/post/: batch.rs  single.rs
integration-tests/: Cargo.toml
integration-tests/src/backend/features/: batch.rs  persistent_log.rs  update_proposal.rs  votes_history.rs
integration-tests/src/backend/rewards/: active_voters_rewards.rs  proposers_fund.rs  voter_rewards.rs
integration-tests/src/backend/sanity/: private.rs  public.rs
integration-tests/src/common/: load.rs  mainnet.rs  mainnet_wallet_ext.rs  mod.rs  rewards.rs  snapshot_filter.rs  wallet.rs
integration-tests/src/common/registration/: controller.rs  mod.rs  remote.rs  result_assert.rs
integration-tests/src/common/snapshot/: controller.rs  mod.rs  starter.rs
integration-tests/src/component/: mod.rs
integration-tests/src/component/backend/: cip_36_support.rs
integration-tests/src/component/backend/rewards/: mod.rs  proposers_fund.rs
integration-tests/src/component/registration/: local.rs  testnet.rs
integration-tests/src/component/snapshot/: local.rs  mod.rs  testnet.rs
integration-tests/src/e2e/: testnet.rs
integration-tests/src/e2e/local/: active_voters_rewards.rs  mod.rs
integration-tests/src/integration/: from_snapshot_to_catalyst_toolbox.rs  from_snapshot_to_merge.rs  from_snapshot_to_vitup.rs  mod.rs
integration-tests/src/non_functional/local/: load.rs
mainnet-tools/: Cargo.toml
mainnet-tools/src/wallet/: mod.rs
registration-service/: Cargo.toml  cli.html  configuration.html  introduction.html
registration-service/src/: context.rs  lib.rs  rest.rs  utils.rs
registration-service/src/args/: mod.rs
registration-service/src/cardano/: error.rs
registration-service/src/cardano/cli/: mod.rs
registration-service/src/cardano/cli/api/: address.rs  query.rs  stake_address.rs  transaction.rs
registration-service/src/cardano/cli/command/: query.rs
registration-service/src/cardano/cli/command/address/: build.rs
registration-service/src/cardano/cli/command/stake_address/: mod.rs
registration-service/src/cardano/cli/command/transaction/: mod.rs
registration-service/src/catalyst_toolbox/: mod.rs
registration-service/src/client/: mod.rs  rest.rs
registration-service/src/config/: mod.rs
registration-service/src/job/: builder.rs  mod.rs
registration-service/src/voter_registration/: mod.rs
registration-verify-service/: Cargo.toml
registration-verify-service/src/job/: mod.rs
resources/tests/example/: challenges.json  funds.json  proposals.json
snapshot-service/: cli.html  configuration.html  introduction.html
snapshot-trigger-service/: Cargo.toml
snapshot-trigger-service/src/client/: mod.rs  rest.rs
snapshot-trigger-service/src/config/: mod.rs
valgrind/: Cargo.toml  configuration.html  introduction.html
valgrind/src/client/: mod.rs
valgrind/src/client/node/: rest.rs
vitup/: Cargo.toml  committee_1  configuration.html  data_generation.html  genesis.yaml  initial_setup.dot  introduction.html  mock.html  run_modes.html  voting_token.txt
vitup-cli/: Cargo.toml
vitup-cli/src/: args.rs  main.rs
vitup-cli/src/commands/: defaults.rs  info.rs  mod.rs  node.rs  run.rs  setup.rs  shutdown.rs  wallet.rs
vitup-cli/src/config/: definitions.rs  mod.rs
vitup-cli/src/utils/: jorup_update.rs
vitup/docker/: Dockerfile
vitup/docker/demo/: Dockerfile
vitup/docker/disruption/: Dockerfile
vitup/docker/local/: Dockerfile
vitup/docker/mock/: Dockerfile
vitup/example/fund4/dryrun/: config.yaml  snapshot-11-06-2021.json
vitup/example/fund4/prod/: config.yaml
vitup/example/fund5/dryrun/: config.yaml  snapshot.json
vitup/example/fund5/prod/: config.yaml
vitup/resources/vit_station/: up.sql
vitup/src/builders/: mod.rs
vitup/src/builders/helpers/: qr.rs  static_data.rs  time.rs  vote_plan.rs
vitup/src/builders/utils/: tree.rs
vitup/src/cli/validate/: deployment.rs
vitup/src/config/: builder.rs  migrations.rs  mod.rs  service.rs
vitup/src/config/initials/: block0.rs  mod.rs  snapshot.rs
vitup/src/config/static_data/: current.rs  info.rs  mod.rs  next.rs
vitup/src/mode/mock/: config.rs  fragment_strategy.rs  ledger_state.rs  mock_state.rs  mod.rs  snapshot.rs
vitup/src/mode/mock/farm/: context.rs  controller.rs
vitup/src/mode/mock/farm/config/: mod.rs
vitup/src/mode/mock/farm/rest/: mod.rs
vitup/src/mode/mock/rest/: mod.rs  search.rs
vitup/src/mode/spawn/: mod.rs  service.rs
vitup/src/mode/standard/controllers/: main.rs
vitup/src/mode/standard/controllers/vit_station/: data.rs
vitup/src/mode/standard/controllers/wallet_proxy/: mod.rs  settings.rs
vitup/src/setup/: diff.rs
vitup/src/setup/validate/: ideascale.rs
vitup/tests/data/: mod.rs  public.rs  representative.rs
vitup/tests/mock/: startup.rs
