[workspace]
members = [
  "iapyx",
  "vitup",
  "valgrind",
  "integration-tests",
  "registration-service",
  "registration-verify-service",
  "snapshot-trigger-service",
  "signals-handler",
]

[patch."https://github.com/input-output-hk/chain-libs.git"]
chain-core = { path = "../chain-libs/chain-core" }
chain-addr = { path = "../chain-libs/chain-addr" }
chain-crypto = { path = "../chain-libs/chain-crypto" }
chain-impl-mockchain = { path = "../chain-libs/chain-impl-mockchain" }
chain-time = { path = "../chain-libs/chain-time" }
chain-vote = { path = "../chain-libs/chain-vote" }
chain-ser = { path = "../chain-libs/chain-ser" }
chain-storage = { path = "../chain-libs/chain-storage" }
cardano-legacy-address = { path = "../chain-libs/cardano-legacy-address" }
typed-bytes = { path = "../chain-libs/typed-bytes" }
imhamt = { path = "../chain-libs/imhamt" }

[patch."https://github.com/input-output-hk/jormungandr.git"]
jcli = { path = "../jormungandr/jcli" }
jormungandr-lib = { path = "../jormungandr/jormungandr-lib" }
jormungandr-automation = { path = "../jormungandr/testing/jormungandr-automation" }
hersir = { path = "../jormungandr/testing/hersir" }
thor = { path = "../jormungandr/testing/thor" }

[patch."https://github.com/input-output-hk/jortestkit.git"]
jortestkit = { path = "../jortestkit" }
