[package]
name = "iapyx"
version = "0.0.1"
authors = ["dkijania <dariusz.kijania@iohk.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.7"
wallet-core = { git = "https://github.com/input-output-hk/chain-wallet-libs.git", branch = "update-new-serde"}
wallet = { git = "https://github.com/input-output-hk/chain-wallet-libs.git", branch = "update-new-serde"}
hdkeygen = { git = "https://github.com/input-output-hk/chain-wallet-libs.git", branch = "update-new-serde"}
bip39 = { git = "https://github.com/input-output-hk/chain-wallet-libs.git", branch = "update-new-serde"}
chain-crypto = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "remove-deserialize-trait" }
chain-core = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "remove-deserialize-trait"  }
chain-addr = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "remove-deserialize-trait" }
chain-ser = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "remove-deserialize-trait"  }
chain-impl-mockchain = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "remove-deserialize-trait"  }
chain-time = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "remove-deserialize-trait" }
chain-vote = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "remove-deserialize-trait" }
hex = "0.4"
rand = "0.8"
rand_core = "0.6"
itertools = "0.9.0"
cryptoxide = "0.3.2"
ed25519-bip32 = "^0.3.1"
jormungandr-lib = { git = "https://github.com/input-output-hk/jormungandr.git", branch = "update-chain-libs" }
jormungandr-automation = { git = "https://github.com/input-output-hk/jormungandr.git", branch = "update-chain-libs" }
thor = { git = "https://github.com/input-output-hk/jormungandr.git", branch = "update-chain-libs" }
hersir = { git = "https://github.com/input-output-hk/jormungandr.git", branch = "update-chain-libs" }
jortestkit = { git = "https://github.com/input-output-hk/jortestkit.git", branch = "master" }
catalyst-toolbox = { git = "https://github.com/input-output-hk/catalyst-toolbox.git", branch = "update-new-serde"}
valgrind = { path = "../valgrind"}
hyper = "0.13.6"
thiserror = "1.0"
serde_json = "1.0.53"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "*"
dialoguer = "0.6.2"
structopt = "0.3"
console = "0.11"
csv = "1.1"
warp = { version = "0.3", features = ["tls"] }
warp-reverse-proxy = "0.3.2"
tokio = { version = "^1.4.0", features = ["macros", "signal", "rt", "fs", "sync"] }
url = "2.1.1"
image = "0.23.12"
eccoxide = { git = "https://github.com/eugene-babichenko/eccoxide.git", branch = "fast-u64-scalar-mul", features = ["fast-u64-scalar-mul"], optional = true }
rayon = "1"

[dependencies.reqwest]
version = "0.10.6"
default-features = false
features = ["blocking","rustls-tls"]
