[package]
name = "valgrind"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jormungandr-lib = { git = "https://github.com/input-output-hk/jormungandr.git", branch = "update-chain-libs" }
jormungandr-automation = { git = "https://github.com/input-output-hk/jormungandr.git", branch = "update-chain-libs" }
wallet = { git = "https://github.com/input-output-hk/chain-wallet-libs.git", branch = "update-new-serde" }
wallet-core = { git = "https://github.com/input-output-hk/chain-wallet-libs.git", branch = "update-new-serde" }
hex = "0.4"
itertools = "0.9.0"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
regex = "*"
tokio = { version = "1.4", features = ["macros","rt","rt-multi-thread"] }
hyper = "0.13.6"
warp = "0.3"
serde_json = "1.0"
warp-reverse-proxy = "0.3.2"
structopt = "0.3"
jortestkit = { git = "https://github.com/input-output-hk/jortestkit.git", branch = "master" }
vit-servicing-station-tests = { git = "https://github.com/input-output-hk/vit-servicing-station.git", branch = "update-new-serde" }
vit-servicing-station-lib = { git = "https://github.com/input-output-hk/vit-servicing-station.git", branch = "update-new-serde" }
chain-core           = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "remove-deserialize-trait" }
chain-crypto         = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "remove-deserialize-trait", features = [ "property-test-api" ] }
chain-impl-mockchain = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "remove-deserialize-trait", features = [ "property-test-api" ] }
chain-ser = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "remove-deserialize-trait"  }
chain-time = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "remove-deserialize-trait" }
chain-vote = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "remove-deserialize-trait" }
chain-addr = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "remove-deserialize-trait" }
url = "2.2.2"

[dependencies.reqwest]
version = "0.10.10"
default-features = false
features = ["blocking", "rustls-tls", "json"]

