[package]
name = "valgrind"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jormungandr-lib = { git = "https://github.com/input-output-hk/jormungandr.git", branch = "catalyst-fund11" }
jormungandr-automation = { git = "https://github.com/input-output-hk/jormungandr.git", branch = "catalyst-fund11" }
wallet = { git = "https://github.com/input-output-hk/chain-wallet-libs.git", branch = "catalyst-fund9" }
wallet-core = { git = "https://github.com/input-output-hk/chain-wallet-libs.git", branch = "catalyst-fund9" }
hex = "0.4"
itertools = "0.10.3"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
regex = "*"
tokio = { version = "1.4", features = ["macros","rt","rt-multi-thread"] }
hyper = "0.13.6"
warp = "0.3"
serde_json = "1.0"
warp-reverse-proxy = "0.3.2"
structopt = "0.3"
jortestkit = { git = "https://github.com/input-output-hk/jortestkit.git", branch = "master" }
vit-servicing-station-tests = { git = "https://github.com/input-output-hk/vit-servicing-station.git", branch = "catalyst-fund9" }
vit-servicing-station-lib = { git = "https://github.com/input-output-hk/vit-servicing-station.git", branch = "catalyst-fund9" }
chain-core           = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "catalyst-fund9" }
chain-crypto         = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "catalyst-fund9", features = [ "property-test-api" ] }
chain-impl-mockchain = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "catalyst-fund9", features = [ "property-test-api" ] }
chain-ser = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "catalyst-fund9"  }
chain-time = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "catalyst-fund9" }
chain-vote = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "catalyst-fund9" }
chain-addr = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "catalyst-fund9" }
url = "2.2.2"

[dependencies.reqwest]
version = "0.10.10"
default-features = false
features = ["blocking", "rustls-tls", "json"]
