[package]
name = "vitup-cli"
version = "0.1.0"
authors = ["dkijania <dariusz.kijania@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jorup = { git = "https://github.com/input-output-hk/jorup.git", branch = "expose_lib" }